--- a/app/src/main/res/layout/activity_generate_quiz.xml
+++ b/app/src/main/res/layout/activity_generate_quiz.xml
@@ -139,15 +139,15 @@
         android:textColor="@color/white"
         android:layout_marginHorizontal="32dp"
         android:layout_marginBottom="8dp"
-        app:layout_constraintBottom_toTopOf="@id/btnSaveQuiz"
+        app:layout_constraintBottom_toTopOf="@id/btnViewContent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
     <Button
-        android:id="@+id/btnSaveQuiz"
+        android:id="@+id/btnViewContent"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="Save Quiz"
+        android:text="View Content"
         android:textStyle="bold"
         android:background="@drawable/rounded_button_dark"
         android:textColor="@color/white"
@@ -156,7 +156,6 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
-
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
