--- a/app/src/main/res/layout/activity_create_account.xml
+++ b/app/src/main/res/layout/activity_create_account.xml
@@ -5,147 +5,146 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:gravity="center"
     android:background="@color/text_grey"
     android:padding="16dp">
 
-    <TextView
-        android:id="@+id/tv_create_account"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Creating Account"
-        android:textColor="@color/primary_blue"
-        android:textSize="24sp"
-        android:fontFamily="sans-serif-medium"
-        android:layout_gravity="center"
-        android:paddingBottom="24dp" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Name:"
-        android:textColor="@color/primary_blue"
-        android:textSize="18sp"
-        android:fontFamily="sans-serif" />
-
-    <EditText
-        android:id="@+id/et_name"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:backgroundTint="@color/secondary_blue"
-        android:padding="12dp"
-        android:textColor="@color/dark_gray"
-        android:layout_marginBottom="16dp"
-        android:background="@drawable/rounded_edittext"
-        android:hint="Enter your name" />
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:orientation="vertical">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Email:"
-        android:textColor="@color/primary_blue"
-        android:textSize="18sp"
-        android:fontFamily="sans-serif" />
+        <TextView
+            android:id="@+id/tv_create_account"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Creating Account"
+            android:textColor="@color/primary_blue"
+            android:textSize="24sp"
+            android:fontFamily="sans-serif-medium"
+            android:layout_gravity="center"
+            android:paddingBottom="24dp" />
 
-    <EditText
-        android:id="@+id/et_email"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:backgroundTint="@color/secondary_blue"
-        android:padding="12dp"
-        android:textColor="@color/dark_gray"
-        android:layout_marginBottom="16dp"
-        android:background="@drawable/rounded_edittext"
-        android:hint="Enter your email" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Name:"
+            android:textColor="@color/primary_blue"
+            android:textSize="18sp"
+            android:fontFamily="sans-serif" />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="User Name:"
-        android:textColor="@color/primary_blue"
-        android:textSize="18sp"
-        android:fontFamily="sans-serif" />
+        <EditText
+            android:id="@+id/et_name"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:layout_marginBottom="16dp"
+            android:background="@drawable/rounded_edittext"
+            android:backgroundTint="@color/secondary_blue"
+            android:padding="12dp"
+            android:textColor="@color/dark_gray"
+            android:hint="Enter your name" />
 
-    <EditText
-        android:id="@+id/et_username"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:backgroundTint="@color/secondary_blue"
-        android:padding="12dp"
-        android:textColor="@color/dark_gray"
-        android:layout_marginBottom="16dp"
-        android:background="@drawable/rounded_edittext"
-        android:hint="Enter your username" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Email:"
+            android:textColor="@color/primary_blue"
+            android:textSize="18sp"
+            android:fontFamily="sans-serif" />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Password:"
-        android:textColor="@color/primary_blue"
-        android:textSize="18sp"
-        android:fontFamily="sans-serif" />
+        <EditText
+            android:id="@+id/et_email"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:layout_marginBottom="16dp"
+            android:background="@drawable/rounded_edittext"
+            android:backgroundTint="@color/secondary_blue"
+            android:padding="12dp"
+            android:textColor="@color/dark_gray"
+            android:hint="Enter your email" />
 
-    <EditText
-        android:id="@+id/et_password"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:backgroundTint="@color/secondary_blue"
-        android:padding="12dp"
-        android:textColor="@color/dark_gray"
-        android:layout_marginBottom="16dp"
-        android:background="@drawable/rounded_edittext"
-        android:hint="Enter your password"
-        android:inputType="textPassword" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="User Name:"
+            android:textColor="@color/primary_blue"
+            android:textSize="18sp"
+            android:fontFamily="sans-serif" />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Date of Birth:"
-        android:textColor="@color/primary_blue"
-        android:textSize="18sp"
-        android:fontFamily="sans-serif" />
+        <EditText
+            android:id="@+id/et_username"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:layout_marginBottom="16dp"
+            android:background="@drawable/rounded_edittext"
+            android:backgroundTint="@color/secondary_blue"
+            android:padding="12dp"
+            android:textColor="@color/dark_gray"
+            android:hint="Enter your username" />
 
-    <EditText
-        android:id="@+id/et_DateOfBirth"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:backgroundTint="@color/secondary_blue"
-        android:padding="12dp"
-        android:textColor="@color/dark_gray"
-        android:layout_marginBottom="24dp"
-        android:background="@drawable/rounded_edittext"
-        android:hint="Date of Birth"
-        android:focusable="false" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Password:"
+            android:textColor="@color/primary_blue"
+            android:textSize="18sp"
+            android:fontFamily="sans-serif" />
+
+        <EditText
+            android:id="@+id/et_password"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:layout_marginBottom="16dp"
+            android:background="@drawable/rounded_edittext"
+            android:backgroundTint="@color/secondary_blue"
+            android:padding="12dp"
+            android:textColor="@color/dark_gray"
+            android:hint="Enter your password"
+            android:inputType="textPassword" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Date of Birth:"
+            android:textColor="@color/primary_blue"
+            android:textSize="18sp"
+            android:fontFamily="sans-serif" />
+
+        <EditText
+            android:id="@+id/et_DateOfBirth"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:layout_marginBottom="24dp"
+            android:background="@drawable/rounded_edittext"
+            android:backgroundTint="@color/secondary_blue"
+            android:padding="12dp"
+            android:textColor="@color/dark_gray"
+            android:hint="Date of Birth"
+            android:focusable="false" />
+
+    </LinearLayout>
 
     <Button
         android:id="@+id/btn_create_account"
         android:layout_width="match_parent"
         android:layout_height="60dp"
         android:text="Create Account"
-        android:backgroundTint="@color/primary_blue"
-        android:textColor="@color/white"
-        android:fontFamily="sans-serif"
         android:textSize="18sp"
-        android:background="@drawable/rounded_button_dark" />
+        android:fontFamily="sans-serif"
+        android:textColor="@color/white"
+        android:background="@drawable/rounded_button_dark"
+        android:backgroundTint="@color/primary_blue" />
 
     <Button
         android:id="@+id/btn_back"
-        android:layout_width="120dp"
-        android:layout_height="60dp"
-        android:text="Back"
-        android:backgroundTint="@color/secondary_blue"
-        android:textColor="@color/white"
-        android:fontFamily="sans-serif"
-        android:textSize="18sp"
-        android:layout_gravity="end"
-        android:background="@drawable/rounded_button_dark"
-        android:layout_marginTop="16dp" />
-
-    <ImageView
-        android:id="@+id/imageView"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:srcCompat="@drawable/robot_logo" />
+        android:layout_height="60dp"
+        android:layout_marginTop="16dp"
+        android:text="Back"
+        android:textSize="18sp"
+        android:fontFamily="sans-serif"
+        android:textColor="@color/white"
+        android:background="@drawable/rounded_button_dark"
+        android:backgroundTint="@color/secondary_blue" />
 
 </LinearLayout>
-
