fixed a bug in the quiz class and fixed chapter title display

--- a/app/src/main/res/layout/activity_lesson.xml
+++ b/app/src/main/res/layout/activity_lesson.xml
@@ -23,13 +23,17 @@
 
         <TextView
             android:id="@+id/tvChapterTitle"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
+            android:gravity="center"
             android:text="CHAPTER 1"
             android:textSize="18sp"
             android:textStyle="bold"
-            android:textColor="@color/primary_blue" />
+            android:textColor="@color/primary_blue"
+            android:maxLines="2"
+            android:ellipsize="end"
+            android:textAlignment="center"/>
+
     </RelativeLayout>
 
     <androidx.recyclerview.widget.RecyclerView
